# keycloak-poc

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.resource  README.md  config.json.example  config.yaml.example  config_compose.json  docker-compose.yml  main.py  pyproject.toml  resource_server.py
